--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>00:00 | 本地時間</title>
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='32' height='32' viewBox='0 0 32 32'><circle cx='16' cy='16' r='14' fill='none' stroke='%232c3e50' stroke-width='2'/><line x1='16' y1='16' x2='16' y2='8' stroke='%232c3e50' stroke-width='2' stroke-linecap='round'/><line x1='16' y1='16' x2='24' y2='16' stroke='%232c3e50' stroke-width='1.5' stroke-linecap='round'/></svg>" type="image/svg+xml">
+    <link rel="icon" href="favicon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="/icons/apple-touch-icon.png" type="image/png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&family=Roboto+Mono:wght@700&display=swap" rel="stylesheet">
+    <link rel="manifest" href="/manifest.json" />
     <style>
         * {
             margin: 0;
